# mp3downloader

./: LICENSE  README.md  setup.cfg
src/pydownloader/: cli.py  downloader.py  monad.py
tests/: downloader_test.py
