[metadata]
name = pydownloader
author = Max Weise
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = pydownloader
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.8
    pytest-cov>=2.0
    mypy>=0.190
    flake8>=3.9
    tox>=3.24
pdoc>=12.1.0

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
# To be complient with black
max-line-length = 88
